--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                   Best online education service In Iran
                 </p>
                 <h2 class="text-uppercase mt-4 mb-5">
-                  One Step Ahead This Season
+                  One Step Ahead all Seasons
                 </h2>
                 <div>
                   <a href="#" class="primary-btn2 mb-3 mb-sm-0">learn more</a>
